Rename action type & use list of actions
